--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <h1>Will you be my Valentine? 💖</h1>
-    <button class="btn yes" onclick="alert('I love you!')">Yes</button>
+    <button class="btn yes" onclick="alert('I love you paya;!')">Yes</button>
     <button class="btn no" id="noButton">No</button>
 
     <script>
